--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -111,3 +111,20 @@ ul {
 .el-breadcrumb__inner.is-link {
   font-weight: 400 !important;
 }
+
+/* HTML: <div class="loader"></div> */
+.loader {
+  width: 120px;
+  height: 12px;
+  background: linear-gradient($xtxColor 0 0) left -40px top 0/40px 20px,
+  linear-gradient(#ddd 0 0) center/100% 50%;
+  background-repeat: no-repeat;
+  animation: l5 1s infinite linear;
+}
+
+@keyframes l5 {
+  100% {
+    background-position: right -40px top 0,
+    center;
+  }
+}
